[tool.poetry]
name = "eth-two-project"
version = "0.1.0"
description = ""
authors = ["Traismer <alekstrais@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
web3 = "==7.0.0b6"
eth-tester = "==0.12.0b1"
py-evm = "^0.10.1b1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
